fixed image gap on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -195,26 +195,22 @@ ul.work>:nth-child(2) {
 }
 
 .Lyra {
-    background-image: url(../img/plot.jpg);
-    background-repeat: no-repeat;
-    background-size:100%;
-    
+    background-image: url(../img/Lyra.jpg);
+
+
 }
 
 
 .Centro {
-    background-image: url(../img/plot.jpg);
+    background-image: url(../img/centro.jpg);
 }
 
 .plot {
-    background-image: url(../img/centro.jpg);
+    background-image: url(../img/plot.jpg);
 }
 
 .UMMA {
     background-image: url(../img/UMMA.jpg);
-    background-repeat: no-repeat;
-    background-size:100%;
-
 }
 
 .peapod {
@@ -299,7 +295,7 @@ p {
 footer {
     text-align: center;
     padding: 20px 0;
-    opacity: .5;
+    /*opacity: .5;*/
 }
 
 footer p {
@@ -365,6 +361,8 @@ footer a:hover {
     .intro {
         background-position: 50vw 5vw;
     }
+
+    .right { min-height: 600px; }
 }
 
 
@@ -430,24 +428,28 @@ footer a:hover {
     }
 /* Try Targeting this area to fix cutoff of images on mobile/tablet*/
     .UMMA {
-        background-position-x: 30%;
+        background-position-x: 40%;
     }
     .plot {
-        background-position-x: 70%;
+        background-position-x: 40%;
     }
     .Centro {
         background-position-x: 30%;
-        background-image: url(../img/360-photos.jpg);
+        /*background-image: url(../img/360-photos.jpg);*/
     }
     .peapod {
         /* 	background-image: url(../img/fb360-mobile.png); */
-        background-size: 100% auto;
-        background-position: center top;
+        /*background-position-x: 30%;*/
+        background-position-x: 30%;
+        /*background-size: 100%;*/
+        /*padding-bottom: 0;*/
+        /*background-position: center top;*/
 
     }
     .Lyra {
         /*background-image: url(../img/fbspaces-mobile.png);*/
-        background-position: center 10%;
-        background-position-x: 10%;
+        /*background-position: center 10%;*/
+        background-position-x: 35%;
     }
+    .UMMA, .plot, .Centro, .peapod, .Lyra { min-height: 450px; }
 }
